# dmjedi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DV2_Scribble.ipynb  LICENSE.md  Makefile  README.md  ROADMAP.md  conda-pkgs.txt  dev-environment.yml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v0.2.0-MILESTONE-AUDIT.md
.planning/milestones/: v0.1.0-REQUIREMENTS.md  v0.1.0-ROADMAP.md  v0.1.1-MILESTONE-AUDIT.md  v0.1.1-REQUIREMENTS.md  v0.1.1-ROADMAP.md  v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md
.planning/phases/01-generator-infrastructure/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-SUMMARY.md
.planning/phases/02-sql-dialects/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-integration-testing/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-04-SUMMARY.md
.planning/phases/04-lsp-server/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-UAT.md  04-VALIDATION.md  04-VERIFICATION.md
dmjedi/exceptions/: __init__.py  datavault_exceptions.py
dmjedi/model/: __init__.py  columns.py  database.py  datamart.py  datavault.py  stage.py
docs/: release-checklist.md
examples/: sales-domain.dv
examples/multi-file/: customers.dv  orders.dv  products.dv
src/dmjedi/: __init__.py
src/dmjedi/cli/: errors.py  (+1 more)
tests/: conftest.py  test_basic_entities.py  test_cli.py  test_cli_json.py  test_discovery.py  test_docs.py  test_generators.py  test_hash.py  test_imports.py  test_integration.py  test_linter.py  test_lsp.py  test_mcp.py  test_model.py  test_parser.py  test_registry.py  test_simple_dv_model.py  test_sql_execution_helpers.py  test_sql_jinja_dialects.py  test_types.py
tests/fixtures/: __init__.py  all_entity_rows.py  all_entity_types.dv  bridge_pit.dv  effsat_samlink.dv  sales.dv
tests/helpers/: __init__.py  sql_execution.py
(+156 files in other folders)
