[project]
name = "dmjedi"
version = "0.2.0"
description = "Data Modeling Jedi — CLI for Data Vault 2.1 modeling and data warehouse automation"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Kevin Haferkamp" }]
keywords = ["data-vault", "data-warehouse", "automation", "etl", "elt", "databricks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "lark>=1.2",
    "mcp>=1.20,<2",
    "pygls>=1.3",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "duckdb>=1.5.2",
    "sqlglot>=30.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-snapshot>=0.9",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
dmjedi = "dmjedi.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dmjedi"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/dmjedi/cli/main.py" = ["B008"]  # typer uses function calls in defaults

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov --cov-report=term-missing --cov-fail-under=85"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/dmjedi"]
